Working copy of component interaction

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>UdemyPractice</title>
+  <title>Component Property Binding</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <div class="container my-5">
+    <app-root></app-root>
+  </div>
 </body>
 </html>
